tests/integration/features/machine_identifiers/_validations/03_requirement_mid_must_be_unique/test.itest
RUN: %expect_exit 1 %strictdoc export %S | filecheck %s --dump-input=fail
CHECK: error: TraceabilityIndex: the node MID is not unique: ABC0123. All machine identifiers (MID) must be unique values. Affected nodes:
CHECK: Requirement(MID = 'ABC0123', TITLE = 'Foo', document = Document(TITLE = 'Doc 1',  (input.sdoc)))
CHECK: and
CHECK: Requirement(MID = 'ABC0123', TITLE = 'Foo', document = Document(TITLE = 'Doc 2',  (input2.sdoc))).
